--- a/portfolio1.css
+++ b/portfolio1.css
@@ -1,70 +1,49 @@
-.button {
-    background-color: #4CAF50;
-    color: blue;
-    padding: 6px 10px;
-    text-align: center;
-    text-decoration: none;   
-    margin:2px;
-    cursor: pointer;
-    margin-top:3%;
-    margin-right:1.5%;
-}
-.top{
-    float: right;
-    color:blue;
-    background-color:palevioletred;
-    border-radius: 20%;
-    cursor: pointer;
-}
-.top:hover {
-    background-color: dodgerblue;
-    color: white;
-}
-
 .media{
     background-color: yellowgreen;
 }
 
 .g1 {
-
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 1em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 1em;
 }
-.g1 {
-    border: 2px lightseagreen;
-    border-radius: 5px;
-}
-
 .g1 > div {
-    border: 2px lightseagreen;
-    border-radius: 5px;
-    background-color: lightseagreen;
-    padding: 10px;
-    color:aqua;
+  border: 2px lightseagreen;
+  border-radius: 5px;
+  background-color: lightseagreen;
+  padding: 10px;
+  color:aqua;
 }
 
 .nested {
-    border: 2px #f1f1f1;
-    border-radius: 5px;
-    background-color: #f1f1f1;
-    padding: 1em;
+  border: 2px #f1f1f1;
+  border-radius: 5px;
+  background-color: #f1f1f1;
+  padding: 1em;
 }
 
 * {box-sizing: border-box;}
 
-h1{
-    font-family: sans-serif;
+.main h1{
+    font-family: sans serif;
     font-size: 30px;
     text-align:center;
-    color:pink;
+    color:peru;
 }
 .middle{
-     width: 100%;   
+   width: 100%;
+   
+}
+.main h2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    float: right;
+    font-size: 1cm;
+    margin-top: 0.8cm;
+    color: crimson;
 }
 p{
-    text-align: center;
+  text-align: center;
 }
 .img1{
     width: 100%;
