--- a/portfolio1.css
+++ b/portfolio1.css
@@ -42,7 +42,7 @@ h1 {
     padding: 8px;
 }
 
-/* Create four equal columns that floats next to each other */
+/* Create three equal columns that floats next to each other */
 .column {
     float: left;
     width: 33.3%;
